Adjust hero: Can you make the text centered

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </header>
 
     <!-- Main Content Section -->
-    <main class="flex-grow flex flex-col justify-center w-full max-w-[90rem] z-10 relative mt-12 md:mt-0">
-        <div class="w-full md:w-[45%] lg:w-[38%] flex flex-col gap-8">
+    <main class="flex-grow flex flex-col justify-center items-center w-full max-w-[90rem] z-10 relative mt-12 md:mt-0">
+        <div class="w-full md:w-[45%] lg:w-[38%] flex flex-col gap-8 text-center">
             <p class="text-xl md:text-2xl font-medium leading-snug tracking-tight">
                 Delphi AI scales personalized mentorship by creating conversational digital clones trained on your existing content. We help experts capture the $50B knowledge economy through authentic voice cloning.
             </p>
